Fix model file creation

--- a/artifacts/artifacts-tags.ipynb
+++ b/artifacts/artifacts-tags.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "01ecf6bc-3d14-4529-b993-9f1cfdbebe1d",
    "metadata": {},
    "outputs": [],
@@ -10,14 +10,17 @@
     "import pickle\n",
     "from sklearn import datasets\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "import mlrun\n",
     "\n",
+    "# Train the model\n",
     "iris = datasets.load_iris()\n",
     "X, y = iris.data, iris.target\n",
     "model = RandomForestClassifier()\n",
     "model.fit(X, y)\n",
     "\n",
+    "# Save the model to V3IO\n",
     "file_path = \"v3io:///users/normal-user/model.pkl\"\n",
-    "with open(file_path, \"wb\") as file:\n",
+    "with mlrun.get_dataitem(file_path).open(\"wb\") as file:\n",
     "    pickle.dump(model, file)"
    ]
   },
