Set watch=True for job

--- a/jobs_and_funcs/all-types-of-funcs.ipynb
+++ b/jobs_and_funcs/all-types-of-funcs.ipynb
@@ -193,7 +193,7 @@
     "        \"model_name\": \"cancer\",\n",
     "    },\n",
     "    handler=\"train\",\n",
-    "    watch=False,\n",
+    "    watch=True,\n",
     ")"
    ]
   },
