Change scheduled job name

--- a/jobs_and_funcs/all-types-of-funcs.ipynb
+++ b/jobs_and_funcs/all-types-of-funcs.ipynb
@@ -154,7 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gen_data_run = project.run_function(\"data-prep\", local=True, watch=False)"
+    "gen_data_run = project.run_function(\"data-prep\", local=True, watch=True)"
    ]
   },
   {
@@ -213,7 +213,7 @@
    "outputs": [],
    "source": [
     "# schedule for every hour\n",
-    "trainer_run = project.run_function(\n",
+    "trainer_run_sch = project.run_function(\n",
     "    trainer,\n",
     "    inputs={\"dataset\": gen_data_run.outputs[\"dataset\"]},\n",
     "    params={\n",
